# fusion-reviewer

./: .env.example  .gitignore  .ignore  README.md  cleanup-admin.ps1  paradigm_criteria.yaml  providers.yaml  pyproject.toml  review_plan.yaml  roles.yaml  一键启动-Web版.bat  一键清理-管理员模式.bat  清理临时文件-普通模式.ps1  目录说明与清理建议.md
codex-skill/: PACKAGE_MANIFEST.md  SKILL.md
codex-skill/references/: roles.yaml
codex-skill/scripts/: finalize_run.py  install_skill.py  prepare_paper.py
scripts/: generate_schemas.py
skills/paper-review-committee/: SKILL.md
skills/paper-review-committee/agents/: claude.yaml  openai.yaml
skills/paper-review-committee/references/: artifact_contract.md  roles.yaml
skills/paper-review-committee/references/schemas/: editor.schema.json  final_summary.schema.json  manuscript_classification.schema.json  previous_concerns.schema.json  reviewer.schema.json  revision_assessment.schema.json  revision_claims.schema.json  revision_response_review.schema.json
skills/paper-review-committee/scripts/: finalize_run.py  install_skill.py  prepare_paper.py
src/fusion_reviewer/: artifact_writer.py  classifier.py  cli.py  codex_repair.py  codex_runtime.py  concern_merge.py  config.py  document_io.py  evidence.py  models.py  normalization.py  orchestration.py  provenance.py  providers.py  quote_verifier.py  repair.py  reports.py  revision_review.py  schema_validator.py  service.py  storage.py  text_utils.py  web.py
src/fusion_reviewer/templates/: index.html  job.html  job_panel.html
tests/: test_classifier.py  test_codex_repair.py  test_codex_runtime.py  test_codex_skill_scripts.py  test_concern_merge.py  test_config.py  test_evidence.py  test_mineru_retry.py  test_normalization.py  test_orchestration.py  test_pipeline.py  test_providers.py  test_quote_verifier.py  test_skill_frontmatter.py  test_static_no_llm.py  test_storage.py
tests/fixtures/: classifier_empirical_response.json  classifier_theory_response.json  empirical_experiment.md  theory_formal_model.md
