[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-reviewer"
version = "0.2.0"
description = "Platform-neutral deterministic core for committee-style academic paper review (PDF/DOCX/DOC). Host agent handles LLM reasoning; core handles evidence preparation, schema validation, quote verification, concern merging, and artifact rendering."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.1.7",
  "pydantic>=2.8.0,<3",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.2",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "pypdf>=4.3.0",
  "pymupdf>=1.24.9",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.2.0"]
dev = [
  "pytest>=8.3.0",
  "jsonschema>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.tmp/pytest-basetemp"
cache_dir = ".tmp/pytest-cache"
